# do-an-02

./: .gitignore  CMakeLists.txt  Doxyfile  out.txt  readme.md  sdkconfig  sdkconfig.old  tree
AppComponents/: ComponentCommon.h
AppComponents/Depracated_P16Com/: CMakeLists.txt  Parallel16.h  Parallel16Def.h  Parallel16Utils.h
AppComponents/LCD32/: CMakeLists.txt  LCD32.c  LCD32.h  LCD32Cmds.h  LCD32Colors.h
AppComponents/LCD320x240/: CMakeLists.txt  LCD320x240.c  LCD320x240.h
AppComponents/P16Com/: CMakeLists.txt  P16Com.c  P16Com.h
AppConfig/: All.h  CMakeLists.txt  Components.h  DevicePinout.h  FirmwareType.h  SystemLog.h
AppESPWrap/: All.h  AppESPWrap.c  CMakeLists.txt  ESPFreeRTOSWrapper.h  ESPGPIOWrapper.h  ESPLogWrapper.h  ESPRTOSWrapper.h
AppFonts/: AppFont.c  AppFont.h  CMakeLists.txt  gfxfont.h
AppUtils/: All.h  AppUtils.c  Arithmetic.h  BitOp.h  CMakeLists.txt  FlagControl.h  Loop.h  ReturnType.h
Main/: Application.c  Application.h  CMakeLists.txt
config/: generalConfig.h  pinConfig.h  projectConfig.h
diagram/: diagram01.drawio  diagram02.drawio  diagram03.drawio
docs/: index.html  install-ESPIDF-tool.md  welcom-to-my-team-vie.md
font/: CMakeLists.txt  fontUtils.c
fonts/: CMakeLists.txt  fontUtils.c  fontUtils.h  gfxfont.h
helper/: CMakeLists.txt  espGPIOWrapper.h  espLogWrapper.h  espRTOSWrapper.h  flag.h  general.h  helper.c  helper.h  param.h  return.h
main/: CMakeLists.txt  __dataControl.h  __dataStorage.h  __userInterface.h  do-an-02.c  do-an-02.h  monitor.h  myApp.c  receiver.h  sender.h  testCBuff.c  ui.h
(+1994 files in other folders)
